--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@playwright/test": "^1.58.1",
     "@types/node": "^25.1.0",
+    "pdf-parse": "^2.4.5",
     "typescript": "^5.9.3"
   }
 }
